--- a/des_OFB/style.css
+++ b/des_OFB/style.css
@@ -4,48 +4,50 @@
     margin: 0;
     padding: 0;
 }
-    
+
 body {
     font-family: 'Poppins', sans-serif;
+}
+
+img{
+    width:100%;
+    object-fit:contain;
 }
 
 html {
     scroll-behavior: smooth;
 }
 
+
+
 .section__image__container_terminal {
     display: flex;
-    height:400px;
-    width:400px;
+
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+ 
 }
 
 .section__image__container_forward {
     display: flex;
-    height:150px;
-    width:150px;
+
+
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+
 }
 .section__image__container_reverse {
     display: flex;
-    height:150px;
-    width:150px;
+
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+ 
 }
 
 .section__image__container {
     display: flex;
-    height:700px;
-    width:700px;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
 
 }
 
@@ -66,9 +68,8 @@ html {
 }
 
 .explanation {
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+    
+    padding: 20px;
 }
 
 #link{
